[tool.poetry]
name = "pytunneler"
version = "0.1.1"
description = "python udp and tcp tunnel"
authors = ["fafa_junhe <junhefafa@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/fafa-junhe/pytunneler"

[tool.poetry.dependencies]
python = "^3.8"
tabulate = "^0.9.0"
aioconsole = "^0.8.0"
picows = "^1.5"
websockets = "^15.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.3,<9.0.0"
pytest-asyncio = ">=0.23.2,<0.25.0"
pytest-cov = ">=4.1,<6.0"
pytest-httpserver = "^1.0.8"
ruff = ">=0.1.8,<0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 999
indent-width = 2

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = '--doctest-modules --ignore examples'